Updated CorsConfig